<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@android:color/white"
  android:orientation="vertical">

  <android.support.design.widget.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:hintEnabled="true"
    app:hintAnimationEnabled="true"
    app:errorEnabled="true">

    <android.support.design.widget.TextInputEditText
      android:id="@+id/text_input_ingredient"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:hint="@string/please_enter_main_ingredient"/>

  </android.support.design.widget.TextInputLayout>

  <Button
    android:id="@+id/randomize_button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="36dp"
    android:textAppearance="@style/TextAppearance.AppCompat"
    android:text="@string/randomize"/>


  <TextView
    android:id="@+id/recipe_name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textStyle="bold"
    android:layout_gravity="center"/>

  <ImageView
    android:id="@+id/recipe_image"
    android:layout_width="300dp"
    android:layout_height="300dp"
    android:layout_gravity="center"/>

  <Button
    android:id="@+id/save_button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="36dp"
    android:textAppearance="@style/TextAppearance.AppCompat"
    android:text="@string/save_recipe"/>

  <ListView
    android:id="@+id/random_recipe_result"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:text="@string/returned_recipe_rng"/>


</LinearLayout>
