<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:id="@+id/saved_recipes_layout"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  tools:context=".controller.SavedRecipesFragment">

<ListView
  android:id="@+id/recipe_list"
  android:layout_width="0dp"
  android:layout_height="wrap_content"/>

</android.support.constraint.ConstraintLayout>